feat: stabilize backend startup, fix db config, and resolve compilation errors